--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,7 @@ img {
     text-decoration: none;
     letter-spacing: 2px;
     font-family: 'Bebas Neue', "Roboto Condensed", "Arial", "sans-serif";
+    transition: 0.6s ease;
 }
 
 .main-link-inner {
@@ -105,12 +106,12 @@ img {
     transition: 0.5s ease;
 }
 
-.main-link-inner:hover {
+.main-link:hover {
     opacity: 0.6;
-    color: #fff;
+    background-color: rgba(30, 144, 255, 0.6);
 }
 
-.main-link-inner:active {
+.main-link:active {
     opacity: 0.8;
 }
 
@@ -173,6 +174,15 @@ only screen and (                min-resolution: 2dppx) {
     letter-spacing: 2px;
     color: #222222;
     font-family: 'Bebas Neue', "Roboto Condensed", "Arial", "sans-serif";
+    transition: 0.3s ease;
+}
+
+.iteam-latest-videos-link:hover{
+    opacity: 0.8;
+    color: #1E90FF;
+}
+.iteam-latest-videos-link:active{
+    opacity: 0.6;
 }
 
 .iteam-latest-videos-meta {
@@ -250,4 +260,13 @@ only screen and (                min-resolution: 2dppx) {
     background-color: #1E90FF;
     padding: 16px 209px;
     border-radius: 4px;
+    transition: 0.3s ease;
+}
+
+.latest-videos-link-reolad:hover{
+    opacity: 0.8;
+    background-color: rgba(30, 144, 255, 0.8);
+}
+.latest-videos-link-reolad:active{
+    opacity: 0.6;
 }
